--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "bootstrap-vue": "^2.7.0",
     "buttercms": "^1.2.2",
     "core-js": "^3.6.4",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-jquery": "^1.0.6",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
